# Valkyrie

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  gen_protobuf_bindings.sh  valkyrie.code-workspace
include/Valkyrie/: autogen  debug  kernel  sensors  sim
notes/: beaglesetup.md
sandbox/: DronePhysics.ipynb
src/: CMakeLists.txt
src/cfg/freertos/: FreeRTOSConfig.h
src/cfg/sim/: ports.json
src/config/freertos/: FreeRTOSConfig.h
src/database/: sensor_timing.json  sim_ports.json
src/dbg/log/: CMakeLists.txt  logger.cpp  logger.hpp
src/kernel/: CMakeLists.txt  readme.md
src/kernel/data/: CMakeLists.txt  parameters.cpp  parameters.hpp  registry_data.cpp  registry_data.hpp  registry_loader.cpp  registry_loader.hpp
src/kernel/startup/: CMakeLists.txt  main.cpp  sys_init.cpp  sys_init.hpp
src/kernel/threads/: CMakeLists.txt  background_thread.cpp  hardware_thread.cpp  listing.hpp  monitor_thread.cpp  sim_thread.cpp  thread_listing.cpp  thread_listing.hpp
src/sensors/: accel_intf.hpp  accel_sensor.hpp  sensor_imu.cpp  sensor_intf.hpp  sensor_types.hpp  virtual_sensor.cpp  virtual_sensor.hpp
src/sensors/accelerometer/: CMakeLists.txt  accel_driver_cmn.cpp  accel_driver_sim.cpp  accel_sensor.hpp
src/sensors/gyroscope/: CMakeLists.txt  gyro_driver_cmn.cpp  gyro_driver_sim.cpp  gyro_sensor.hpp
src/sensors/magnetometer/: CMakeLists.txt  mag_driver_cmn.cpp  mag_driver_sim.cpp  mag_sensor.hpp
src/sim/: CMakeLists.txt  sim_observables.cpp  sim_thread.hpp  sim_transport.cpp  sim_transport.hpp
test/: CMakeLists.txt
test/bringup/: test_test.cpp
tools/doxygen/: ValkyrieDoxyfile
tools/scripts/: beagle_debug_loader.sh  cfg_bld_hw_linux.sh  cfg_bld_sim_freertos.sh  cfg_bld_sim_os.sh  cfg_bld_tests.sh
